# Trefftz

./: .buildinfo  .t1.msh.swp  MeshIO.py  README.md  __init__.py  api.html  code_comments  from_gmsh.py  genindex.html  index.html  materials.py  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_MeshIO.py  user_checks.py  user_tests.py
.doctrees/: api.doctree  index.doctree
.doctrees/api/: dg.doctree  fem.doctree  mesh.doctree
.doctrees/design/: data_structures.doctree
.doctrees/theory/: fluxes.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/trefftz/dg/: boundary_conditions.html
_modules/trefftz/fem/: boundary_conditions.html
_sources/: index.rst.txt
_sources/api/: dg.rst.txt  fem.rst.txt  mesh.rst.txt
_sources/theory/: fluxes.md.txt
api/: dg.html  fem.html  mesh.html
design/: data_structures.html
docs/: conf.py  index.rst
docs/api/: fem.rst
docs/design/: data_structures.md
docs/source/: api.rst  conf.py
docs/theory/: fluxes.md
mesh/: checking_utilities.py  core.py  from_matplotlib.py  from_pygmsh.py  plot.py
notebooks/: CleanWaveguide.msh  playground.ipynb
problems/: __init__.py  base.py
problems/waveguide/: __init__.py  base.py  exact_solutions.py  geometries.py  plot.py  regions.py  waveguides.py
tests/: test_from_matplotlib.py  test_from_pygmsh.py  test_serial_fluxes.py  test_single_fluxes.py  test_triangles.py
theory/: fluxes.html
trefftz/: numpy_types.py
trefftz/dg/: __init__.py  assemblers.py  basis.py  block_fluxes.py  boundary_conditions.py  fluxes.py  functions.py  serial_fluxes.py
trefftz/fem/: assemblers.py  boundary_conditions.py  serial_fluxes.py
trefftz/mesh/: __init__.py  checking_utilities.py  core.py  from_matplotlib.py  from_pygmsh.py  geometry.py  plot.py  readers.py
(+2 files in other folders)
