[project]
name = "trefftz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "ngsolve>=6.2.2506",
    "numpy>=2.2.6",
    "pygmsh>=7.1.17",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

