[project]
name = "trefftz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
pygmsh = [
    "pygmsh>=7.1.17",
]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "myst-parser>=4.0.1",
    "notebook>=7.5.1",
    "pytest>=9.0.1",
    "scipy-stubs>=1.15.3.0",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=0.5.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["trefftz*", "problems*"]
